login and register functionality added

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,8 @@
 spring:
   data:
     mongodb:
-      uri: mongodb+srv://prajwalnarute:Prajwal%40123@foodapp.jdid3cd.mongodb.net/expense_tracker?retryWrites=true&w=majority&appName=foodapp
+      uri: mongodb://127.0.0.1:27017/expense_tracker
+#      uri: mongodb+srv://prajwalnarute:Prajwal%40123@foodapp.jdid3cd.mongodb.net/expense_tracker?retryWrites=true&w=majority&appName=foodapp
   application:
     name: ExpenseTrackerAPI
 
@@ -10,3 +11,6 @@ server:
 
 expense:
   opening-balance: 50000
+
+jwt:
+  secret: mysecurejwtsecretkeyforexpensetrackerapp12092002
